--- a/notebooks/2019_12_09_Test_Decode_CW.ipynb
+++ b/notebooks/2019_12_09_Test_Decode_CW.ipynb
@@ -180,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "decoder = ClusterlessDecoder(transition_type='uniform', replay_speed=40, place_bin_size=5)"
+    "decoder = ClusterlessDecoder(transition_type='empirical_movement', replay_speed=40, place_bin_size=5)"
    ]
   },
   {
