--- a/notebooks/2019_12_09_Sandbox_Plotting_CW.ipynb
+++ b/notebooks/2019_12_09_Sandbox_Plotting_CW.ipynb
@@ -236,9 +236,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:ac_clusterless_decoding] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ac_clusterless_decoding-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -250,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
