--- a/notebooks/2019_12_17_Random_Walk.ipynb
+++ b/notebooks/2019_12_17_Random_Walk.ipynb
@@ -1829,9 +1829,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cameron_alison_theta_decoding] *",
+   "display_name": "Python [conda env:ac_clusterless_decoding] *",
    "language": "python",
-   "name": "conda-env-cameron_alison_theta_decoding-py"
+   "name": "conda-env-ac_clusterless_decoding-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1843,7 +1843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
