--- a/notebooks/2019_12_23_Random_Walk_Averaging_Bins.ipynb
+++ b/notebooks/2019_12_23_Random_Walk_Averaging_Bins.ipynb
@@ -495,9 +495,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:ac_clusterless_decoding] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ac_clusterless_decoding-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -509,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
